--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -1,10 +1,11 @@
 .main {
+    display: flex;
     width: 750px;
-    border: 3px solid #ccc;
-    border-radius: 10px;
-    margin-top: 70px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 70px;
+    border: 3px solid #ccc;
     box-shadow: 5px 10px 10px #888;
-    display: flex;
+    border-radius: 10px;
+    overflow: hidden;
 }
