feat: create search bar
Change-Id: I9bebb65ae7e5285ebae0a6f94df95420aec34db4

--- a/src/styles/DataViewContainer.css
+++ b/src/styles/DataViewContainer.css
@@ -1,10 +1,9 @@
 .data-view {
     width: 550px;
-    position: relative;
+    flex: 1;
 }
 
 .filters {
-    position: absolute;
     bottom: 0;
     width: 100%;
 }
