--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -1,11 +1,11 @@
 .main {
-    display: flex;
     width: 750px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 70px;
+    margin: 0 auto;
+}
+
+.player {
+    display: flex;
     border: 3px solid #ccc;
-    box-shadow: 5px 10px 10px #888;
     border-radius: 10px;
-    overflow: hidden;
+    box-shadow: 5px 10px 10px #888;
 }
